# matcha-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/chagashi/: Cargo.toml
crates/chagashi/src/: border.rs  borderize.rs  cursor.rs  dyn_model.rs  flex.rs  lib.rs  list.rs  spinner.rs  tabs.rs  textinput.rs  utils.rs  viewport.rs
crates/chagashi/src/textarea/: document.rs  mod.rs  position.rs  row.rs
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: mod.rs
crates/matcha/: Cargo.toml
crates/matcha/examples/: alt_screen.rs  async.rs  borderize.rs  flex.rs  hello.rs  list-default.rs  resize.rs  simple.rs  spinner.rs  tabs.rs  textarea.rs  textinput.rs  viewport.rs
crates/matcha/src/: dyn_model.rs  extension.rs  formatter.rs  key.rs  lib.rs  messages.rs  termable.rs  terminal.rs
