[workspace]
resolver = "2"

members = [
  "crates/matcha",
  "crates/chagashi",
]

[workspace.dependencies]
# Workspace crates
matcha = { package = "matcha-rs", path = "crates/matcha", version = "0.1.0" }
chagashi = { path = "crates/chagashi", version = "0.1.0" }

# External dependencies (versions centralized here)
crossterm = "0.27"
tokio = "1"
async-trait = "0.1"
anyhow = "1"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.5"
regex = "1.10.2"
futures = "0.3"
crokey = "0.6"
serde = "1"
serde_json = "1"
toml = "0.5"
tracing = "0.1"
itertools = "0.10.1"
derive_more = "0.99"


