[package]
name = "chagashi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
matcha = { version = "*", path = "../matcha" }
derive_more = "0.99"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.5"
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]