[package]
name = "chagashi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { workspace = true }
matcha = { workspace = true }
derive_more = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = []
tracing = ["dep:tracing"]