[package]
name = "chagashi-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
once_cell = "1.19.0"
serde_json = "1.0"

[dependencies.chagashi]
git = "https://github.com/bokuweb/matcha-rs"
package = "chagashi"
tag = "0.0.1"

[dependencies.matcha]
git = "https://github.com/bokuweb/matcha-rs"
package = "matcha-rs"
tag = "0.0.1"

[[bin]]
name = "fuzz"
path = "fuzz_targets/mod.rs"
test = false
doc = false
bench = false
