[package]
name = "matcha-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Keep the Rust crate name as `matcha` so existing `use matcha::...` code keeps working.
name = "matcha"

[dependencies]
crossterm = { workspace = true, features = ["event-stream"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
crokey = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true, optional = true }
itertools = { workspace = true }


[dev-dependencies]
chagashi = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]